objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>LatAm</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacting</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Discarded</fullName>
        </values>
        <values>
            <fullName>Interested</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Unworked</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Legal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Sales Accepted</fullName>
        </values>
        <values>
            <fullName>Sales Qualified</fullName>
        </values>
        <values>
            <fullName>Telesales Accepted</fullName>
        </values>
        <values>
            <fullName>Telesales Qualified</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Unworked</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacting</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Discarded</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Interested</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Unworked</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMITerritory__c</fullName>
        <label>AMi Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMTerritory__c</fullName>
        <label>AM Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ARTerritory__c</fullName>
        <label>AR Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_By_Date__c</fullName>
        <formula>DATEVALUE(  Accept_By__c )</formula>
        <label>Accept By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accept_By__c</fullName>
        <description>This is the Date/Time that the Lead needs to be accepted by</description>
        <label>Accept By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accept_SLA_Violation_Date__c</fullName>
        <description>This flag is reffered in time based work flow rule to trigger an email fro every day till it reaches Violation end Data</description>
        <label>Accept SLA Violation Date Flag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accept_SLA_Violation_End_Date__c</fullName>
        <label>Accept SLA Violation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accept_SLA_Warning_Date_Flag__c</fullName>
        <label>Accept SLA Warning Date Flag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accept_SLA_Warning_Date__c</fullName>
        <description>Accept By Date - Warning Period for Accept from LM SLA object</description>
        <label>Accept SLA Warning Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acceptance_SLA_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks whether the Acceptance SLA has been violated.  This field will be read only to the user, but available to all in the list views</description>
        <label>Acceptance SLA Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>$User.Sub_Bu__c</field>
                <operation>equals</operation>
                <value>LatAm</value>
            </filterItems>
            <filterItems>
                <field>Account.GLI_Business_Unit__c</field>
                <operation>contains</operation>
                <value>LatAm</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>$User.Sub_Bu__c</field>
                <operation>notEqual</operation>
                <value>LatAm</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non-Converted Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as for Lead Address override in lightning, DPS-11981</description>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Validate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as for Lead Address validation in lightning, DPS-11981</description>
        <label>Address Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Andromeda_DB__c</fullName>
        <label>Andromeda DB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Andromeda_ID__c</fullName>
        <label>Andromeda ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Andromeda_Username__c</fullName>
        <label>Andromeda Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_status__c</fullName>
        <label>Approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Segment__c</fullName>
        <description>Created as part of data segmentation for LOTUS, should hold different Business Segments. DPS-1711</description>
        <inlineHelpText>Customer information is frozen once a year - a Sales User can set this upon Account Creation, but otherwise this is a view-only field</inlineHelpText>
        <label>Frozen Market Current Year Segment L1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <description>Created as part of TR Store. Holds value for second line of billing address.</description>
        <label>Billing Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Available__c</fullName>
        <description>To be used by BDR/SDR to select whether the lead has budget. Supplementary for sales reps</description>
        <inlineHelpText>To be used by BDR/SDR to select whether the lead has budget. Supplementary for sales reps</inlineHelpText>
        <label>Budget Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_LatAm__c</fullName>
        <label>Business Unit (LatAm)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bejerman</fullName>
                </value>
                <value>
                    <fullName>BR - CORPORATE</fullName>
                </value>
                <value>
                    <fullName>BR - PRINT</fullName>
                </value>
                <value>
                    <fullName>BR - PROFESSIONAL</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>GTM</fullName>
                </value>
                <value>
                    <fullName>Laley</fullName>
                </value>
                <value>
                    <fullName>Mastersaf</fullName>
                </value>
                <value>
                    <fullName>MEXICO</fullName>
                </value>
                <value>
                    <fullName>Mexico - Corporate</fullName>
                </value>
                <value>
                    <fullName>Mexico - Print</fullName>
                </value>
                <value>
                    <fullName>Novaprolink</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Revista – Online</fullName>
                </value>
                <value>
                    <fullName>Revista – Print</fullName>
                </value>
                <value>
                    <fullName>Revista – Telesales</fullName>
                </value>
                <value>
                    <fullName>SL - Corporate</fullName>
                </value>
                <value>
                    <fullName>TEDESCO</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Auth_Status__c</fullName>
        <label>CC Auth Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Cell__c</fullName>
        <label>Campaign Cell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitive_Products__c</fullName>
        <description>Created as a Part of DPS-20546</description>
        <label>Competitive Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Activity_Count__c</fullName>
        <description>Total number of &quot;Completed&quot; Activities related to this Lead</description>
        <inlineHelpText>Total number of &quot;Completed&quot; Activities related to this Lead</inlineHelpText>
        <label>Completed Activity Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consensus__ChildRecordUpdateDate__c</fullName>
        <label>ChildRecordUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consensus__Historical_Data_Fail_Reason__c</fullName>
        <label>Historical Data Fail Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consensus__Loading_Historical_Data_Status__c</fullName>
        <label>Loading Historical Data Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>succeed_to_load</fullName>
                </value>
                <value>
                    <fullName>failed_to_load</fullName>
                </value>
                <value>
                    <fullName>reload_by_100</fullName>
                </value>
                <value>
                    <fullName>reload_by_10</fullName>
                </value>
                <value>
                    <fullName>reload_by_1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consensus__Uuid__c</fullName>
        <label>Uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__existInConsensus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>existInConsensus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_SAP_ID__c</fullName>
        <label>Contact SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>$User.Sub_Bu__c</field>
                <operation>equals</operation>
                <value>LatAm</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.GLI_Business_Unit__c</field>
                <operation>contains</operation>
                <value>LatAm</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>$User.Sub_Bu__c</field>
                <operation>notEqual</operation>
                <value>LatAm</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Non-Converted Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <description>This field has the Context information that Eloqua can send over</description>
        <label>Context</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Convert_By_Date__c</fullName>
        <formula>DATEVALUE( Convert_By__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Convert By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Convert_By__c</fullName>
        <description>This is the Date/Time by which the Lead needs to be converted or Rejected by</description>
        <label>Convert By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Convert_SLA_Violation_Date_Flag__c</fullName>
        <description>This flag is reffered in time based work flow rule to trigger an email fro every day till it reaches Violation end Data</description>
        <label>Convert SLA Violation Date Flag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Convert_SLA_Violation_End_Date__c</fullName>
        <label>Convert SLA Violation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Convert_SLA_Warning_Date_Flag__c</fullName>
        <label>Convert SLA Warning Date Flag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Convert_SLA_Warning_Date__c</fullName>
        <label>Convert SLA Warning Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Convert_SLA_violation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks whether the Conversion SLA has been violated.    This field will be read only to the user, but available to all in the list views</description>
        <label>Convert SLA violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <description>Used to store the exact time when a lead was converted.</description>
        <inlineHelpText>Used to store the exact time when a lead was converted.</inlineHelpText>
        <label>Converted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Status__c</fullName>
        <description>Populated based on Outreach Sequence Info (CRM-18132)</description>
        <inlineHelpText>Populated based on Outreach Sequence Info</inlineHelpText>
        <label>Current Sequence Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Number__c</fullName>
        <description>Populated based on Outreach Sequence Info (CRM-18132)</description>
        <inlineHelpText>Populated based on Outreach Sequence Info</inlineHelpText>
        <label>Current Sequence Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <inlineHelpText>If SAP Account Number is populated, changes made to this field will not be saved.</inlineHelpText>
        <label>Customer Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Academic Lecturer</fullName>
                </value>
                <value>
                    <fullName>Academic Non-Tertiar</fullName>
                </value>
                <value>
                    <fullName>Academic Student</fullName>
                </value>
                <value>
                    <fullName>Academic Tertiary In</fullName>
                </value>
                <value>
                    <fullName>Accounting Tier 1A</fullName>
                </value>
                <value>
                    <fullName>Accounting Tier 1B</fullName>
                </value>
                <value>
                    <fullName>Accounting Tier 2A</fullName>
                </value>
                <value>
                    <fullName>Accounting Tier 2B</fullName>
                </value>
                <value>
                    <fullName>Accounting Tier 3A</fullName>
                </value>
                <value>
                    <fullName>Accounting Tier 3B</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Bar &amp; Chambers</fullName>
                </value>
                <value>
                    <fullName>Bar Chambers</fullName>
                </value>
                <value>
                    <fullName>Bar Sole</fullName>
                </value>
                <value>
                    <fullName>Bookshops Campus</fullName>
                </value>
                <value>
                    <fullName>Bookshops Other</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corporate Tier 1</fullName>
                </value>
                <value>
                    <fullName>Corporate Tier 2</fullName>
                </value>
                <value>
                    <fullName>Corporate Tier 3</fullName>
                </value>
                <value>
                    <fullName>Court Federal</fullName>
                </value>
                <value>
                    <fullName>Court Judge</fullName>
                </value>
                <value>
                    <fullName>Court State</fullName>
                </value>
                <value>
                    <fullName>Global Law Firm</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government Local</fullName>
                </value>
                <value>
                    <fullName>Government Police</fullName>
                </value>
                <value>
                    <fullName>Government State</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <inlineHelpText>If SAP Account Number is populated, changes made to this field will not be saved.</inlineHelpText>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Org__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACADEMIC</fullName>
                </value>
                <value>
                    <fullName>ACCOUNTING</fullName>
                </value>
                <value>
                    <fullName>AGENCY</fullName>
                </value>
                <value>
                    <fullName>AGENT</fullName>
                </value>
                <value>
                    <fullName>AGENT-3rdPARTYVENDOR</fullName>
                </value>
                <value>
                    <fullName>AGENT-DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>AGENT-FED LINK</fullName>
                </value>
                <value>
                    <fullName>AGENT-MONEYEXCHANGE</fullName>
                </value>
                <value>
                    <fullName>AGENT-RESELLER</fullName>
                </value>
                <value>
                    <fullName>AUTHOR</fullName>
                </value>
                <value>
                    <fullName>BARRISTER</fullName>
                </value>
                <value>
                    <fullName>BIOTECH/LIFE SCIENCE</fullName>
                </value>
                <value>
                    <fullName>BOOKSHOP</fullName>
                </value>
                <value>
                    <fullName>CENTRAL GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>CHEMICAL</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCT/MAN/ENGINE</fullName>
                </value>
                <value>
                    <fullName>CONSULTING</fullName>
                </value>
                <value>
                    <fullName>CORPORATE</fullName>
                </value>
                <value>
                    <fullName>CORPORATION</fullName>
                </value>
                <value>
                    <fullName>COURT</fullName>
                </value>
                <value>
                    <fullName>ECOMM/INT/COMPUTING</fullName>
                </value>
                <value>
                    <fullName>EXTERNAL CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT (FEDERAL)</fullName>
                </value>
                <value>
                    <fullName>FEDERAL GOVT(NON-US)</fullName>
                </value>
                <value>
                    <fullName>FINANCE/BANK/ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>FIRM</fullName>
                </value>
                <value>
                    <fullName>FOOD PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT (STATE, LOCAL)</fullName>
                </value>
                <value>
                    <fullName>HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>HK_ACAD_CITYU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Sub_Type__c</fullName>
        <description>Created for requirement- LatAm Segmentation Project 
BRS_SEG 7.2</description>
        <label>Customer Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Org__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Academic Sales</fullName>
                </value>
                <value>
                    <fullName>Consortia</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_com_Industry__c</fullName>
        <description>These are the standard salesforce.com industries that the data.com industries map to</description>
        <label>Data.com Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Maker_Champion__c</fullName>
        <description>To be used by BDR/SDR to select whether the lead is the decision maker/champion. Supplementary for sales reps.</description>
        <inlineHelpText>To be used by BDR/SDR to select whether the lead is the decision maker/champion. Supplementary for sales reps.</inlineHelpText>
        <label>Decision Maker/Champion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>